--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "𝐑𝟒𝐕𝟒𝐍 𝐒𝐏𝐀𝐌 𝐁𝐎𝐓",
-  "description": "Telegram Fast And Stable Spam Bot By @BlackStorm_Owner",
-  "logo": "https://telegra.ph/file/8620c0a4d64871c0dd37f.jpg",
+  "name": "𝐍𝐆𝐀𝐌𝐄𝐑 𝐒𝐏𝐀𝐌 𝐁𝐎𝐓",
+  "description": "Telegram Fast And Stable Spam Bot By @NGAMEROWNER",
+  "logo": "https://telegra.ph/NGAMER-01-12",
     "env": {
      "API_ID": {
         "description": "Api ID",
